--- a/Angular-Springboot-master/src/app/Components/navigation/navigation.component.html
+++ b/Angular-Springboot-master/src/app/Components/navigation/navigation.component.html
@@ -34,10 +34,10 @@
       <div class="ml-auto" *ngSwitchCase="'admin'">
         <ul class="navbar-nav mt-2 mt-lg-0 ">
           <li class="nav-item">
-            <a class=" nav-link" routerLink="/admin">Home</a>
+            <a class=" nav-link" routerLink="/admin">Add Items</a>
           </li>
           <li class="nav-item">
-            <a class=" nav-link" routerLink="/admin/order">Orders</a>
+            <a class=" nav-link" routerLink="/admin/order">Item Details</a>
           </li>
           <li class="nav-item">
             <a class=" nav-link" (click)="logout()" style="cursor: pointer;">Log out</a>
