--- a/Angular-Springboot-master/src/app/Components/admin/admin.component.html
+++ b/Angular-Springboot-master/src/app/Components/admin/admin.component.html
@@ -6,84 +6,69 @@
                         <button class="mybtn btn btn-secondary" (click)="hide()" *ngIf="showAdd">Click to hide</button>
                 </div>
         </div>
-        <form class="form-horizontal shadow p-3 mb-5 bg-white rounded " #f="ngForm" (ngSubmit)="f.form.valid && addProd(itemname,description,quantity,price,address,emailaddress,phonenumber,freebie,image)"
+        <form class="form-horizontal shadow p-3 mb-5 bg-white rounded " #f="ngForm" (ngSubmit)="f.form.valid && addProd(itemname,emailaddress,phonenumber,freebie,image,description,address)"
                 *ngIf="showAdd">
                 <div class="row">
-                        <div class="col-6">
-                                <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Item Name" #itemname
-                                                ngModel name="itemname">
-                                </div>
-                                <div class="form-group">
-                                        <textarea type="text" class="form-control" placeholder="description" name="description"
-                                                #description ngModel rows="5"></textarea>
-                                </div>
-                                <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="quantity" name="quantity" #quantity
-                                                ngModel>
-                                </div>
-                                <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="price" name="price" #price
-                                                ngModel>
-                                </div>
-
-                                <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Home Address" #address
-                                                ngModel name="address">
-                                </div>
-                                <div class="form-group">
-                                        <textarea type="text" class="form-control" placeholder="Email Address" name="emailaddress"
-                                                #emailaddress ngModel rows="5"></textarea>
-                                </div>
-                                <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Phone Number" name="phonenumber" #phonenumber
-                                                ngModel>
-                                </div>
-                                <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="FreeBie" name="freebie" #freebie
-                                                ngModel>
-                                </div>
-
-                                <div class="form-group">
-                                        <input type="file" class="form-control" placeholder="Item Picture" #image
-                                                accept="image/*" name="image"
-                                                (change)="handleFileInput($event.target.files)">
-                                </div>
-                        </div>
-                        <div class="col-6">
-                                <h4 class="text-center">Image preview</h4>
-                                <img [src]="imageUrl" style="width:400px;height: 300px;">
-
-                        </div>
+                        <label for="name" >
+                                <span>Name</span>
+                                <input type="text" class="form-control" id="name" placeholder="Vendor/Individual" #itemname
+                                                                            ngModel name="itemname">
+                              </label>
+                              <label for="emailid" >
+                                <span>Email</span>
+                                <input type="text" id="emailid" class="form-control" placeholder="Email Address" name="emailaddress"
+                                                                            #emailaddress ngModel rows="5">
+                              </label>
+                              <label for="phoneno">
+                                <span>Phone Number</span>
+                                <input type="text" class="form-control" id="phoneno" placeholder="Phone Number" name="phonenumber" #phonenumber
+                                                                            ngModel>
+                              </label>
+                              
+                              
+                </div>
+                <div class="row">            
                         
+                              <label for="freebie">
+                                <span>FreeBie</span>
+                                <input type="text" class="form-control" id="freebie" placeholder="FreeBie" name="freebie" #freebie
+                                                                            ngModel>
+                              </label>
+                              <label for="upload">
+                                <span>Upload Item Picture</span>
+                                <input type="file" id="upload" class="form-control" placeholder="Item Picture" #image
+                                                                            accept="image/*" name="image"
+                                                                            (change)="handleFileInput($event.target.files)">
+                              </label>
+                              
+                        
+                </div>
+                
+                <div class="row">
+                              <label for="description">
+                                <span>Description</span>
+                                <textarea type="text" class="form-control" id="description" placeholder="description" name="description"
+                                                                            #description ngModel rows="2"></textarea>
+                              </label>
+                              <label for="homeaddress">
+                                <span>Home Address</span>
+                                <textarea type="text" id="homeaddress" class="form-control" placeholder="Home Address" #address
+                                                                            ngModel name="address" rows="2"></textarea>
+                              </label>
+                              
+                </div>
+                <div class="col-6">
+                        <h4 class="text-center">Image preview</h4>
+                        <img [src]="imageUrl" style="width:400px;height: 300px;">
+
                 </div>
                 <div class="row">
                         <div class="col-6">
-                                <input type="submit" class=" btn btn-primary" value="Add Product">
+                                <input type="submit" class=" btn btn-primary" value="Add">
                         </div>
                 </div>
         </form>
-        <hr>
-        <div class="row">
-                <div class="col-3 align-left" *ngFor="let product of items">
-                        <div class="card shadow p-3 mb-5 bg-white rounded">
-                                <div class="card-body">
-                                        <h5 class="card-title">{{product.productname}}</h5>
-                                        <img src="data:image/png;base64,{{product.itemname}}" class="img-responsive"
-                                                height="150px" width="200px" alt="Image">
-                                        <p class="card-text"> {{product.description}}</p>
-                                        <input type="hidden" value={{product.itemid}} #itemid>
-                                        <div class="row">
-                                                <div class="col-6">
-                                                        <button class="btn btn-secondary" (click)="edit(itemid)">Edit</button>
-                                                </div>
-                                                <div class="col-6">
-                                                        <button class="btn btn-danger"
-                                                                (click)="delProd(itemid)">Remove</button>
-                                                </div>
-                                        </div>
-                                </div>
-                        </div>
-                </div>
-        </div>
+                  <hr>
+        
+       
 </div>
