--- a/Angular-Springboot-master/src/app/app.component.html
+++ b/Angular-Springboot-master/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container head-title">
-        <h4 class="display-4 text-center">E-Commerce</h4>
+        <h4 class="display-4 text-center">COVID 19 APP</h4>
         
 </div>
 
