Added files for chat bot

--- a/Angular-Springboot-master/src/app/Components/navigation/navigation.component.html
+++ b/Angular-Springboot-master/src/app/Components/navigation/navigation.component.html
@@ -43,6 +43,9 @@
             <a class=" nav-link" routerLink="/admin/search">Search Post</a>
           </li>
           <li class="nav-item">
+            <a class=" nav-link" routerLink="/admin/chat">Chat Box</a>
+          </li>
+          <li class="nav-item">
             <a class=" nav-link" (click)="logout()" style="cursor: pointer;">Log out</a>
           </li>
         </ul>
